--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Check Runner Availability'
+name: 'Runner Availability Checker'
 description: 'Check for availability of self-hosted GitHub runners and fallback to GitHub-hosted runners if needed'
 author: '@jimmygchen'
 branding:
