--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jimmygchen/runner-fallback-action.git"
+    "url": "git+https://github.com/mikehardy/runner-fallback-action.git"
   },
   "keywords": [
     "GitHub",
     "Actions",
     "Runner"
   ],
-  "author": "",
+  "author": "Mike Hardy <github@mikehardy.net> (https://github.com/mikehardy)",
+  "contributors": [
+    {
+      "name": "Jimmy Chen",
+      "email": "jchen.tc@gmail.com",
+      "url": "https://github.com/jimmygchen"
+    }
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jimmygchen/runner-fallback-action/issues"
+    "url": "https://github.com/mikehardy/runner-fallback-action/issues"
   },
-  "homepage": "https://github.com/jimmygchen/runner-fallback-action#readme",
+  "homepage": "https://github.com/mikehardy/runner-fallback-action#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/http-client": "^2.1.1"
