--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
   },
   "homepage": "https://github.com/mikehardy/runner-fallback-action#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/http-client": "^2.1.1"
+    "@actions/core": "^1.11.1",
+    "@actions/http-client": "^3.0.0"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.0",
-    "eslint": "^8.49.0",
-    "jest": "^29.6.4"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
+    "@vercel/ncc": "^0.38.4",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0"
   },
   "packageManager": "yarn@4.10.3+sha512.c38cafb5c7bb273f3926d04e55e1d8c9dfa7d9c3ea1f36a4868fa028b9e5f72298f0b7f401ad5eb921749eb012eb1c3bb74bf7503df3ee43fd600d14a018266f"
 }
